# ALP-2025-LCC

./: ALP2025-LCC.cabal  CHANGELOG.md  LICENSE  Parsing.hs  Practica1.hs  README.md  dual-numbers.cabal
TP FINAL/src/: Evaluator.hs  Expr.hs  Parser.hs
TP FINAL/test/: TestSuite.hs
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.6.7/: ALP2025-LCC-0.1.0.0-inplace.conf  package.cache
examples/: anidamiento_profundo.txt  basico.txt  casos_error.txt  compuestas.txt  constantes.txt  constantes_extendido.txt  hiperbolicas.txt  identidades_matematicas.txt  nuevas_caracteristicas.txt  numeros_negativos.txt  optimizaciones.txt  precedencia_operadores.txt  test_comentarios.txt  todas_funciones.txt  trigonometricas.txt  valores_especiales.txt
src/: Evaluator.hi  Evaluator.hs  Expr.hi  Expr.hs  FileReader.hs  Parser.hi  Parser.hs  PrettyPrinter.hs
test/: TestSuite.hs  prueba.txt
