cabal-version:      3.0
name:               ALP-2025-TPFINAL
version:            1.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Luciano Amax
maintainer:         tuemail@email.com
category:           Math
build-type:         Simple
synopsis: Evaluador de expresiones matemáticas con derivadas automáticas.
description: Un proyecto universitario en Haskell para construir un evaluador de expresiones matemáticas, junto con derivación automática utilizando números duales.

source-repository head
    type: git
    location: https://github.com/Luciano-amax/ALP-2025-LCC

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Expr
                      Parser
                      Evaluator
    other-modules:    
    build-depends:    base >= 4.14 && < 5
    hs-source-dirs:   src
    default-language: Haskell2010

executable ALP-2025-TPFINAL
    import:           warnings
    main-is:          Main.hs
    build-depends:    base >= 4.14 && < 5,
                      parsec >= 3.1 && < 3.2
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite tests
    import:           warnings
    main-is:          TestSuite.hs
    type:             exitcode-stdio-1.0
    build-depends:    base >= 4.14 && < 5,
                      parsec >= 3.1 && < 3.2,
                      HUnit >= 1.6 && < 1.7
    hs-source-dirs:   test
    default-language: Haskell2010